--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  {% include 'comments.html' %}
+<!--  {% include 'comments.html' %} -->
   {% include 'navbar.html' %}
   {% include 'open_part.html' %}
   {% include 'exam_list.html' %}
