--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,36 +15,32 @@ body {
 .navbar-custom .navbar-text {
     color: rgba(0,0,0, .8);
 }
+
 .navbar-custom .navbar-nav .nav-link {
     color: rgba(0,0,0, .8);
 }
 
-.btn-success {
-	color: 121212;
-	background-color: #D5E3ED;
-	border-color: #70F8BA;
-}
-.btn-success:hover, .btn-success:focus, .btn-success:active {
-	background-color: #AAA1C8;
-	border-color: #70F8BA;
-}
+
 .card {
 	background-color: #EDE4D5;
 }
 
 .card-img-top {
     width: 100%;
-    height: 30vw;
+    height: 70%;
     object-fit: cover;
 }
 
 #openText {
 	padding-top: 18%;
 	font-family: 'Porcelain';
-	font-size: 2.7rem;
+	font-size: 3.5vw;
 }
 #card-title-text {
-	font-size: 2.5rem;
+	font-size: 2em;
+}
+#card-footer-text {
+	font-family: 
 }
 
 .bg-light {
