--- a/templates/exam_list.html
+++ b/templates/exam_list.html
@@ -3,14 +3,14 @@
 		{% load static %}
 	    {% for obj in object_list %}
        <div class="col-md-4 p-1 mb-2">
-	        <div class="card h-100">
-	        	<h3 class="card-title text-center mt-3 mb-0" id='card-title-text'>
-	              {{ obj.title }}
-	            </h3>
-	          <div class="card-body flex-column d-flex">
-	          	<img class="card-img-top-ьв" src="{{ obj.image.url }}" alt="">           
-	            <p class="card-text text-center pt-3">{{ obj.description }}</p>
-			   </div>
+	        <div class="card ">
+	        	<img class="card-img-top" src="{{ obj.image.url }}" alt="Card image cap">
+		        	<div class="card-body py-1 px-2">
+			        	<h3 class="card-title text-center mt-2 mb-0" id='card-title-text'>
+			              {{ obj.title }}
+			            </h3>        
+			            <p class="card-text text-center pt-1" id="card-footer-text">{{ obj.description }}</p>
+			    	</div>
 	        </div>
        </div>
 
