--- a/templates/open_part.html
+++ b/templates/open_part.html
@@ -2,7 +2,7 @@
 <div class="container">
 	<div class="row alight-content-center">
 		<div class="col-sm-6 col-md-7 alight-content-center">
-			<p class="text-center" id="openText">
+			<p class="text-center mb-0" id="openText">
 				Авторские Торты и Десерты<br>__________________<br>От Шеф Кондитера<br>Афониной Алевтины
 			</p>
 		</div>
