open part text changed to english

--- a/templates/open_part.html
+++ b/templates/open_part.html
@@ -3,7 +3,7 @@
 	<div class="row alight-content-center">
 		<div class="col-sm-6 col-md-7 alight-content-center">
 			<p class="text-center mb-0" id="openText">
-				Авторские Торты и Десерты<br>__________________<br>От Шеф Кондитера<br>Афониной Алевтины
+				Author's Cakes and Desserts<br>__________________<br>From the Pastry Chef<br>Afonina Alevtyna
 			</p>
 		</div>
 		<div class="col-sm-6 col-md-5 pt-sm-3 my-0">
