--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,15 +10,15 @@
           
           <ul class="navbar-nav ml-auto">
             <li class="navbar-text mt-auto">
-              <i style="font-size: 14px"><a href="tel: +380505239161">+380505239161</a></i>
+              <i style="font-size: 14px"><a href="tel: #">+ 1 819 555 5555</a></i>
             </li>
             <li class="nav-item ml-2 py-0">
-              <a class="nav-link" href="https://instagram.com/alevtinamanikur?igshid=1qg1pzjtiaft1" target="_blank">
+              <a class="nav-link" href="#" target="_blank">
                 <i class="bi bi-instagram" style="font-size: 18px;"></i>
               </a>
             </li>
             <li class="nav-item py-0">
-              <a class="nav-link" href="https://www.facebook.com/groups/2709393569313281" target="_blank">
+              <a class="nav-link" href="#" target="_blank">
                 <i class="bi bi-facebook" style="font-size: 18px;"></i>
               </a>
             </li>
